syntax = "proto3";

option csharp_namespace = "TodoGrpcService.Protos";

import "google/api/annotations.proto";

package todoit;

service TodoIt {
	//Add, Update, Delete, Get, GetList
	rpc AddTodo(AddTodoRequest) returns (AddTodoResponse)
	{
		 option (google.api.http) = {
            post: "/api/v1/todo",
            body: "*"
        };
	};

	rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse){
		option (google.api.http) = {
            put : "/api/v1/todo",
            body: "*"
        };
	};

	rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse){
		option (google.api.http) = {
            delete: "/api/v1/todo/{id}"
        };
	};

	rpc ReadTodo(ReadTodoRequest) returns (ReadTodoResponse){
		 option (google.api.http) = {
            get: "/api/v1/todo/{id}"
        };
	};

	rpc ReadTodoList(ReadTodoListRequest) returns (ReadTodoListResponse){
		  option (google.api.http) = {
            get: "/api/v1/todo"
        };
	};
}

//Add request and response message
message AddTodoRequest{
	string title=1;
	string description=2;
}

message AddTodoResponse{
	int32 id=1;
	string title=2;
	string description=3;
	string status=4;	
}

//Update request and response message
message UpdateTodoRequest{
	int32 id=1;
	string title=2;
	string description=3;
	string status=4;	
}

message UpdateTodoResponse{
	int32 id=1;
	string title=2;
	string description=3;
	string status=4;	
}

//Delete request and response message
message DeleteTodoRequest{
	int32 id=1;
}

message DeleteTodoResponse{
	int32 id=1;
}

//Read request and response message
message ReadTodoRequest{
	int32 id=1;
}

message ReadTodoResponse{
	int32 id=1;
	string title=2;
	string description=3;
	string status=4;
}

//Read list request and response message
message ReadTodoListRequest{}
message ReadTodoListResponse{ 
	repeated ReadTodoResponse to_do=1;
}